[package]
name = "gco"
version = "0.1.0"
authors = ["ryuta69 <eyma22s.yu@gmail.com>"]
edition = "2018"
repository = "https://github.com/ryuta69/gco"
keywords = ["git", "fuzzy finder"]
license-file = "LICENSE"
readme = "README.md"
description = "A simple logger backend that outputs to a file. \nThis is alpha state."

[dependencies]
skim = "0.8.1"
